; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_IPToStr4or6.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_IPToStr4or6.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @IPToStr4or6(i8* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %4
  br label %37

15:                                               ; preds = %4
  %16 = call i32 @Zero(i32* %11, i32 4)
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @UINTToIP(i32* %9, i32 %17)
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @SetIP6(i32* %10, i32* %19)
  %21 = call i64 @IsIP6(i32* %9)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %29, label %23

23:                                               ; preds = %15
  %24 = call i32 @IsZeroIp(i32* %9)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %31

26:                                               ; preds = %23
  %27 = call i32 @IsZeroIp(i32* %10)
  %28 = icmp eq i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %26, %15
  %30 = call i32 @Copy(i32* %11, i32* %10, i32 4)
  br label %33

31:                                               ; preds = %26, %23
  %32 = call i32 @Copy(i32* %11, i32* %9, i32 4)
  br label %33

33:                                               ; preds = %31, %29
  %34 = load i8*, i8** %5, align 8
  %35 = load i32, i32* %6, align 4
  %36 = call i32 @IPToStr(i8* %34, i32 %35, i32* %11)
  br label %37

37:                                               ; preds = %33, %14
  ret void
}

declare dso_local i32 @Zero(i32*, i32) #1

declare dso_local i32 @UINTToIP(i32*, i32) #1

declare dso_local i32 @SetIP6(i32*, i32*) #1

declare dso_local i64 @IsIP6(i32*) #1

declare dso_local i32 @IsZeroIp(i32*) #1

declare dso_local i32 @Copy(i32*, i32*, i32) #1

declare dso_local i32 @IPToStr(i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
